# wuddz-perms

./: README.md  pyproject.toml  wudz_perms.py
